--- a/butler_web/RentManager/index.html
+++ b/butler_web/RentManager/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=0">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <title>rentmanager</title>
+    <title>短租管家</title>
   </head>
   <body>
     <div id="app"></div>
